Gnome 43: Fix double borders in context menus

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -2824,7 +2824,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background: #272F3F;
-  border: 1px solid #1d232f;
   border-radius: 5px;
   font: initial; }
   .csd menu,
